--- a/donkey/wp-content/themes/donkey/style.css
+++ b/donkey/wp-content/themes/donkey/style.css
@@ -241,18 +241,16 @@ h2 {
   position: relative;
 }
 
-.c-global-nav .menu li a::after {
-  margin: 0 30%;
-  content: "";
-  width: 2px;
-  height: 100%;
-  background-color: #e0e0e0;
-  position: absolute;
-  left: 100%;
+.c-global-nav .menu li {
+  flex-grow: 1;
 }
 
-.c-global-nav .menu li .sub-menu a::after {
-  height: 0;
+.c-global-nav .menu li+li {
+  border-left: 1px solid #e0e0e0;
+}
+
+.c-global-nav .menu .sub-menu li{
+  border: none;
 }
 
 /*ナビゲーションアイコン*/
@@ -274,6 +272,7 @@ h2 {
 
 .c-global-nav .sub-menu {
   display: none;
+  margin: 0 3%;
   border: 2px solid #90CB83;
   position: absolute;
   top: 35px;
@@ -1861,10 +1860,10 @@ p, table, blockquote, address, pre, iframe, form, figure, dl {
 
 .breadcrumb {
   display: flex;
-  padding: 10px;
+  padding: 5px 0px;
   margin: 0 auto;
   flex-wrap: wrap;
-  max-width: 1400px;
+  max-width: 1200px;
 }
 
 @media (max-width: 991px) {
@@ -1935,8 +1934,8 @@ p, table, blockquote, address, pre, iframe, form, figure, dl {
 
 .wysiwyg-editor {
   margin: 0 auto;
-  padding: 50px;
-  max-width: 1400px;
+  padding: 50px 0;
+  max-width: 1200px;
 }
 
 @media (max-width: 991px) {
@@ -2210,7 +2209,7 @@ p, table, blockquote, address, pre, iframe, form, figure, dl {
 
 .contact_form {
   padding: 30px 0 0;
-  max-width: 1400px;
+  max-width: 1200px;
 }
 
 @media (max-width: 991px) {
@@ -2408,7 +2407,7 @@ input.wpcf7-submit:hover {
 
 .sidebar_wrap {
   display: flex;
-  max-width: 1400px;
+  max-width: 1200px;
   margin: 0 auto;
 }
 
