--- a/donkey/wp-content/themes/donkey/editor-style.css
+++ b/donkey/wp-content/themes/donkey/editor-style.css
@@ -1,80 +1,105 @@
 @charset "UTF-8";
 @import url(http://fonts.googleapis.com/earlyaccess/notosansjp.css);
-
-
 /*------エディタ用CSS-----------*/
+
 .editor-styles-wrapper {
-    background-color: #F7F5ED; /* 背景色を薄いグレーに設定 */
+  background-color: #F7F5ED;
+  /* 背景色を薄いグレーに設定 */
 }
 
-
-.editor-styles-wrapper h1{
+.editor-styles-wrapper h1 {
   font-weight: bold;
-  font-size:32px;
-  margin:0 0 0;
+  font-size: 32px;
+  margin: 0 0 0;
   padding: 20px 0;
-   color: #333;
+  color: #333;
 }
-.editor-styles-wrapper h2{
+
+.editor-styles-wrapper h2 {
   font-weight: bold;
-  font-size:25px;
-  margin:25px 0;
-  padding:10px;
-  background:#aad66c;
-  color:white;
+  font-size: 25px;
+  margin: 25px 0;
+  padding: 10px;
+  background: #90CB83;
+  color: white;
 }
-.editor-styles-wrapper h3{
-  font-size:22px;
-  margin:20px 0;
-  padding:0 0 10px 0;
-  border-bottom:2px solid #aad66c;
+
+.editor-styles-wrapper h3 {
+  font-size: 23px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  padding: 0 0 10px 0;
+  border-bottom: 2px solid #90CB83;
 }
-.editor-styles-wrapper h4{
-  font-size:18px;
-  margin:40px 0 0 0;
+
+.editor-styles-wrapper h4 {
+  font-size: 18px;
+  margin: 40px 0 0 0;
 }
-.editor-styles-wrapper h4:before{
-  content:"★";
-  color:#aad66c;
+
+.editor-styles-wrapper h4:before {
+  content: "★";
+  color: #90CB83;
   margin-right: 5px;
 }
-.editor-styles-wrapper h2:first-child,
-.editor-styles-wrapper h2 + h3,
-.editor-styles-wrapper h3 + h4{
-  margin-top:25px;
+
+.editor-styles-wrapper h5 {
+  color: #333;
+  padding: 0.5em 0;
+  border-top: solid 2px #90CB83;
+  border-bottom: solid 2px #90CB83;
+  margin: 20px 0;
+  font-weight: bold;
 }
-.editor-styles-wrapper p{
+
+.editor-styles-wrapper h6 {
+  padding: 0.25em 0.5em;
+  color: #333;
+  background: transparent;
+  border-left: solid 5px #90CB83;
+  font-weight: bold;
+  margin: 10px 0;
+}
+
+.editor-styles-wrapper h2:first-child, .editor-styles-wrapper h2+h3, .editor-styles-wrapper h3+h4 {
+  margin-top: 25px;
+}
+
+.editor-styles-wrapper p {
   line-height: 1;
 }
-.editor-styles-wrapper ul,
-.editor-styles-wrapper ol,
-.editor-styles-wrapper table{
-  margin:25px 0 0 0;
-  font-size:16px;
-  line-height:1.7;
+
+.editor-styles-wrapper ul, .editor-styles-wrapper ol, .editor-styles-wrapper table {
+  margin: 25px 0 0 0;
+  font-size: 16px;
+  line-height: 1.7;
 }
-.editor-styles-wrapper ul,
-.editor-styles-wrapper ol{
-  margin-left:20px;
+
+.editor-styles-wrapper ul, .editor-styles-wrapper ol {
+  margin-left: 20px;
 }
-.editor-styles-wrapper ul{
-  list-style-type:square;
+
+.editor-styles-wrapper ul {
+  list-style-type: square;
 }
-.editor-styles-wrapper ol{
+
+.editor-styles-wrapper ol {
   list-style-type: decimal;
 }
-.editor-styles-wrapper table{
+
+.editor-styles-wrapper table {
   border-collapse: collapse;
 }
-.editor-styles-wrapper table th,
-.editor-styles-wrapper table td{
-  border:2px solid #BEBCBC;
-  padding:10px;
+
+.editor-styles-wrapper table th, .editor-styles-wrapper table td {
+  border: 2px solid #BEBCBC;
+  padding: 10px;
 }
-.editor-styles-wrapper .wp-block-table figcaption{
-  font-size:14px;
-  line-height:1.6;
-  color:#666;
-  margin:10px 0 0 0;
+
+.editor-styles-wrapper .wp-block-table figcaption {
+  font-size: 14px;
+  line-height: 1.6;
+  color: #666;
+  margin: 10px 0 0 0;
   text-align: center;
 }
