--- a/donkey/wp-content/themes/donkey/style.css
+++ b/donkey/wp-content/themes/donkey/style.css
@@ -32,7 +32,7 @@ body a {
 h2 {
   font-size: 35px;
   font-weight: 700;
-  padding: 10px 0 22px 55px;
+  padding: 10px 0 10px 55px;
   display: inline-block;
   background: url("img/title_icon.png") no-repeat;
   background-size: 55px;
@@ -95,6 +95,7 @@ h2 {
 
 .explanation {
   line-height: 1.4;
+  margin-bottom: 30px;
 }
 
 @media (max-width: 991px) {
@@ -116,7 +117,7 @@ h2 {
 .header .header_wrap {
   max-width: 1400px;
   width: 100%;
-  margin: 20px auto;
+  margin: 0 auto 20px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -148,6 +149,7 @@ h2 {
   color: #90CB83;
   font-size: 30px;
   margin-right: 40px;
+  margin-top: 5px;
 }
 
 @media (max-width: 991px) {
@@ -183,24 +185,6 @@ h2 {
   .header .header_wrap .tel_item2 {
     display: none;
   }
-}
-
-.header .header_wrap .header_mail {
-  border: 1px solid #90CB83;
-  width: 330px;
-  padding: 0px 30px 0px 50px;
-  border-radius: 20px;
-  background: url(img/mail.png) no-repeat;
-  background-size: 18px;
-  background-position: 25px 7px;
-  font-weight: 500;
-  margin-top: 10px;
-  font-size: 20px;
-  transition: 1s;
-}
-
-.header .header_wrap .header_mail:hover {
-  background-color: #90CB83;
 }
 
 /*--nav--*/
@@ -249,7 +233,7 @@ h2 {
   border-left: 1px solid #e0e0e0;
 }
 
-.c-global-nav .menu .sub-menu li{
+.c-global-nav .menu .sub-menu li {
   border: none;
 }
 
@@ -420,7 +404,7 @@ h2 {
 
 .mobile-menu .ham_content {
   margin: 0 auto;
-  max-width: 80%;
+  max-width: 35%;
   display: block;
 }
 
@@ -439,9 +423,9 @@ h2 {
   width: auto;
   height: 30px;
   background: url(img/header/tel_icon.png) no-repeat;
-  background-size: 12%;
-  background-position: left 4px;
-  padding-left: 15%;
+  background-size: 20px;
+  background-position: left center;
+  padding-left: 23px;
   padding-bottom: 20px;
   line-height: 1.3;
 }
@@ -451,8 +435,8 @@ h2 {
   font-size: clamp(16px, 1vw, 20px);
   font-weight: 600;
   background-color: #90CB83;
-  border-radius: 10px;
-  max-width: 90%;
+  border-radius: 28px;
+  max-width: 80%;
   margin: 0 auto;
   padding: 5px 5%;
   display: block;
@@ -519,10 +503,6 @@ h2 {
 }
 
 /*-----私たちについて---------------------------------------------------------------------------------*/
-
-.main {
-  max-width: 1200px;
-}
 
 .main .about {
   padding-top: 50px;
@@ -727,23 +707,27 @@ h2 {
   background-image: url(img/main/service_img1.jpg);
   background-repeat: no-repeat;
   background-size: 70%;
-  min-height: 45vw;
+  height: clamp(500px, 1vw, 800px);
   background-position: right 0;
   margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center
 }
 
 @media (max-width: 991px) {
   .main .service .service1 {
     background-position: 0px 370px;
     background-size: 100%;
-    height: 550px;
+    height: clamp(570px, 1vw, 700px);
+    margin-bottom: 30px;
   }
 }
 
 .main .service .service1 h3 {
   font-size: 30px;
   font-weight: 500;
-  margin: 15px 0 50px;
+  margin: 15px 0 40px;
   padding-top: 45px;
   letter-spacing: 10px;
   padding-bottom: 10px;
@@ -794,10 +778,10 @@ h2 {
   width: 570px;
   background-color: rgba(255, 255, 255, 0.7);
   z-index: 3;
-  top: 53px;
   display: flex;
   align-items: center;
   flex-direction: column;
+  position: relative;
 }
 
 @media (max-width: 991px) {
@@ -852,9 +836,8 @@ h2 {
 
 .main .service .service1 .triangle-left {
   z-index: 2;
-  position: relative;
-  top: -180px;
-  left: 570px;
+  position: absolute;
+  left: 634px;
   width: 0;
   height: 0;
   border-style: solid;
@@ -865,7 +848,6 @@ h2 {
 @media (max-width: 991px) {
   .main .service .service1 .triangle-left {
     top: -15px;
-    left: 45%;
     transform: rotate(90deg);
   }
 }
@@ -873,21 +855,26 @@ h2 {
 /*--------生活援助-------------*/
 
 .main .service .service2 {
-  position: relative;
   background-image: url(img/main/service_img2.jpg);
   background-repeat: no-repeat;
   background-size: 70%;
-  min-height: 45vw;
-  background-position: 0 50px;
+  height: clamp(500px, 1vw, 800px);
+  background-position: left 0px;
   margin-bottom: 100px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: flex-end;
+  position: relative;
+  margin-top: 30px;
 }
 
 @media (max-width: 991px) {
   .main .service .service2 {
-    min-height: 620px;
-    margin-bottom: 50px;
-    background-position: 0 430px;
+    background-position: 0px 420px;
     background-size: 100%;
+    height: clamp(610px, 1vw, 700px);
+    margin-bottom: 30px;
   }
 }
 
@@ -905,13 +892,11 @@ h2 {
 }
 
 .main .service .service2 .box_4 {
-  position: absolute;
+  position: relative;
   width: 570px;
   background-color: rgba(255, 255, 255, 0.7);
   z-index: 3;
-  top: 110px;
   right: 0;
-  margin-bottom: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -942,7 +927,7 @@ h2 {
 .main .service .service2 .box_4 h3 {
   font-size: 30px;
   font-weight: 500;
-  margin: 20px 0 50px;
+  margin: 20px 0 40px;
   padding-top: 45px;
   letter-spacing: 10px;
   padding-bottom: 10px;
@@ -992,8 +977,7 @@ h2 {
 .main .service .service2 .triangle-right {
   z-index: 2;
   position: absolute;
-  top: 180px;
-  left: -40px;
+  right: 570px;
   width: 0;
   height: 0;
   border-style: solid;
@@ -1510,7 +1494,7 @@ h2 {
 
 .footer .flex {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
 }
 
 .footer .footer_box {
@@ -1538,9 +1522,9 @@ h2 {
   font-size: 30px;
   margin: 5px 0;
   background: url("img/header/tel_icon.png") no-repeat;
-  background-size: 30px;
-  background-position: left;
-  padding-left: 35px;
+  background-size: 25px;
+  background-position: left 10px;
+  padding-left: 30px;
 }
 
 .footer .footer_box .f_mail {
@@ -1550,7 +1534,7 @@ h2 {
   border-radius: 20px;
   background: url("img/mail.png") no-repeat;
   background-size: 16px;
-  background-position: 30px 10px;
+  background-position: 30px 8px;
   font-weight: 600;
   margin-top: 10px;
   transition: 1s;
@@ -1593,15 +1577,13 @@ h2 {
   display: flex;
   text-align: left;
   margin-top: 70px;
-  margin-left: 50px;
   align-items: flex-start;
   background-color: #FFF;
   line-height: 2;
 }
 
 .footer #footer-menu .menu-item-has-children {
-  margin: 0 auto;
-  max-width: 30%;
+  margin-right: 20px;
 }
 
 /*-----モバイルフッター------------*/
@@ -1729,13 +1711,7 @@ h2 {
 }
 
 p, table, blockquote, address, pre, iframe, form, figure, dl {
-  margin: 0;
   line-height: 1.4;
-}
-
-.wysiwyg-editor p {
-  margin: 10px 0;
-  ;
 }
 
 .main.single pre {
@@ -1745,7 +1721,7 @@ p, table, blockquote, address, pre, iframe, form, figure, dl {
 }
 
 .main.common-lower p {
-  line-height: 1.4;
+  line-height: 1.7;
 }
 
 .wysiwyg-editor h1 {
@@ -1761,7 +1737,7 @@ p, table, blockquote, address, pre, iframe, form, figure, dl {
   font-size: 25px;
   margin: 25px 0;
   padding: 10px;
-  background: #aad66c;
+  background: #90CB83;
   color: white;
   display: block;
 }
@@ -1775,9 +1751,9 @@ p, table, blockquote, address, pre, iframe, form, figure, dl {
 .wysiwyg-editor h3 {
   font-size: 23px;
   font-weight: 600;
-  margin: 20px 0;
+  margin-bottom: 20px;
   padding: 0 0 10px 0;
-  border-bottom: 2px solid #aad66c;
+  border-bottom: 2px solid #90CB83;
 }
 
 .wysiwyg-editor h4 {
@@ -1787,12 +1763,30 @@ p, table, blockquote, address, pre, iframe, form, figure, dl {
 
 .wysiwyg-editor h4:before {
   content: "★";
-  color: #aad66c;
+  color: #90CB83;
   margin-right: 5px;
 }
 
+.wysiwyg-editor h5 {
+  color: #333;
+  padding: 0.5em 0;
+  border-top: solid 2px #90CB83;
+  border-bottom: solid 2px #90CB83;
+  margin: 20px 0;
+  font-weight: bold;
+}
+
+.wysiwyg-editor h6 {
+  padding: 0.25em 0.5em;
+  color: #333;
+  background: transparent;
+  border-left: solid 5px #90CB83;
+  font-weight: 500;
+  margin: 10px 0;
+}
+
 .main.common-lower h2:first-child, .main .common-lower h2+h3, .main .common-lower h3+h4 {
-  margin-top: 25px;
+  margin-top: 10px;
 }
 
 .wysiwyg-editor ul, .wysiwyg-editor ol, .wysiwyg-editor table {
@@ -1818,6 +1812,7 @@ p, table, blockquote, address, pre, iframe, form, figure, dl {
 }
 
 .wysiwyg-editor table th, .wysiwyg-editor table td {
+  border: 2px solid #BEBCBC;
   padding: 20px;
 }
 
@@ -1827,6 +1822,11 @@ p, table, blockquote, address, pre, iframe, form, figure, dl {
   color: #666;
   margin: 10px 0 0 0;
   text-align: center;
+}
+
+.smb-section-break-the-grid__figure>img {
+  /*スノーモンキーの画像の調整*/
+  height: auto;
 }
 
 /*-----アイキャッチの位置------*/
@@ -1853,10 +1853,6 @@ p, table, blockquote, address, pre, iframe, form, figure, dl {
 }
 
 /*-----パンくずリスト------*/
-
-.breadcrumb_bg {
-  background: whitesmoke;
-}
 
 .breadcrumb {
   display: flex;
@@ -1913,10 +1909,6 @@ p, table, blockquote, address, pre, iframe, form, figure, dl {
 }
 
 /*-----記事一覧------*/
-
-.main.page.standard.common-lower .breadcrumb {
-  max-width: 1400px;
-}
 
 .main.single.common-lower h1 {
   margin-bottom: 30px;
@@ -2053,7 +2045,7 @@ p, table, blockquote, address, pre, iframe, form, figure, dl {
 /*-----カテゴリー一覧------*/
 
 .main.category {
-  max-width: 1400px;
+  max-width: 1200px;
   width: 100%;
   padding: 0;
 }
@@ -2068,7 +2060,6 @@ p, table, blockquote, address, pre, iframe, form, figure, dl {
   font-weight: 600;
   background-color: #78b36b;
   height: clamp(180px, 25vw, 280px);
-  max-width: 1400px;
   margin: 0 auto;
   background: url(img/main/news_bg.png);
   background-repeat: no-repeat;
@@ -2153,13 +2144,11 @@ p, table, blockquote, address, pre, iframe, form, figure, dl {
 .page.standard {
   padding: 0;
   z-index: 0;
-  max-width: 1400px;
 }
 
 .page.standard .breadcrumb {
-  max-width: 1400px;
+  max-width: 1200px;
   padding: 10px;
-  background-color: whitesmoke;
 }
 
 #main-visual-underlayer {
@@ -2273,19 +2262,27 @@ p, table, blockquote, address, pre, iframe, form, figure, dl {
 /* 送信ボタン*/
 
 input.wpcf7-submit {
-  width: 80%;
+  margin: 0 auto;
+  display: block;
+  width: 50%;
   height: 60px;
   border-color: #EEE;
-  /* 枠線の色 */
   background: #9ad979;
-  /* ボタンの色 */
   color: #fff;
   font-size: 20px;
   font-weight: 600;
-  border-radius: 10px;
+  border-radius: 28px;
   text-align: center;
-  margin: 20px 10%;
   transition: 1s;
+  margin-bottom: 50px;
+  margin-top: 30px;
+}
+
+@media (max-width: 991px) {
+  input.wpcf7-submit {
+    width: 90%;
+    margin-bottom: 10px;
+  }
 }
 
 input.wpcf7-submit:hover {
@@ -2361,7 +2358,8 @@ input.wpcf7-submit:hover {
 }
 
 .privacy {
-  text-align: right;
+  text-align: center;
+  margin: 0px auto 20px;
 }
 
 .privacy a {
@@ -2454,4 +2452,18 @@ input.wpcf7-submit:hover {
 
 .side-bar .category-lists a:hover {
   background-color: #bbd6b4;
+}
+
+.wp-block-table.company table th, .wp-block-table.company table td {
+  margin: 0;
+  border: none;
+  border-bottom: 2px solid #90CB83;
+}
+
+.wp-block-table.company table tr {
+  padding: 20px 10% 20px 10%;
+}
+
+.wp-block-table.company {
+  padding: 0 15%;
 }
