--- a/donkey/wp-content/themes/donkey/editor-style.css
+++ b/donkey/wp-content/themes/donkey/editor-style.css
@@ -27,7 +27,7 @@
 .editor-styles-wrapper h3 {
   font-size: 23px;
   font-weight: bold;
-  margin-bottom: 20px;
+  margin: 20px 0;
   padding: 0 0 10px 0;
   border-bottom: 2px solid #90CB83;
 }
