--- a/donkey/wp-content/themes/donkey/style.css
+++ b/donkey/wp-content/themes/donkey/style.css
@@ -256,12 +256,12 @@ h2 {
 
 .c-global-nav .sub-menu {
   display: none;
-  margin: 0 3%;
+  width: 215px;
+  margin: 0 2%;
   border: 2px solid #90CB83;
   position: absolute;
   top: 35px;
-  width: 200px;
-  padding: 20px 20px 20px;
+  padding: 20px;
   text-align: left;
   background: rgba(255, 255, 255, 0.96);
   z-index: 10;
@@ -404,7 +404,7 @@ h2 {
 
 .mobile-menu .ham_content {
   margin: 0 auto;
-  max-width: 35%;
+  max-width: 180px;
   display: block;
 }
 
@@ -436,9 +436,9 @@ h2 {
   font-weight: 600;
   background-color: #90CB83;
   border-radius: 28px;
-  max-width: 80%;
+  max-width: 85%;
   margin: 0 auto;
-  padding: 5px 5%;
+  padding: 5px 3px;
   display: block;
   color: white;
 }
@@ -712,12 +712,13 @@ h2 {
   margin-top: 10px;
   display: flex;
   flex-direction: column;
-  justify-content: center
+  justify-content: center;
+  position: relative;
 }
 
 @media (max-width: 991px) {
   .main .service .service1 {
-    background-position: 0px 370px;
+    background-position: 0px 380px;
     background-size: 100%;
     height: clamp(570px, 1vw, 700px);
     margin-bottom: 30px;
@@ -762,12 +763,12 @@ h2 {
 
 .main .service .service1 p {
   margin: 0 55px 60px;
-  line-height: 30px;
+  line-height: 2;
 }
 
 @media (max-width: 991px) {
   .main .service .service1 p {
-    line-height: 30px;
+    line-height: 2;
     margin: 0;
     width: 90%;
   }
@@ -781,14 +782,13 @@ h2 {
   display: flex;
   align-items: center;
   flex-direction: column;
-  position: relative;
 }
 
 @media (max-width: 991px) {
   .main .service .service1 .box_1 {
     width: 100%;
-    margin-top: 10px;
-    top: 0
+    margin-top: 20px;
+    top: -130px
   }
 }
 
@@ -837,7 +837,7 @@ h2 {
 .main .service .service1 .triangle-left {
   z-index: 2;
   position: absolute;
-  left: 634px;
+  left: 570px;
   width: 0;
   height: 0;
   border-style: solid;
@@ -847,7 +847,8 @@ h2 {
 
 @media (max-width: 991px) {
   .main .service .service1 .triangle-left {
-    top: -15px;
+    top: 307px;
+    left: 120px;
     transform: rotate(90deg);
   }
 }
@@ -905,7 +906,7 @@ h2 {
 @media (max-width: 991px) {
   .main .service .service2 .box_4 {
     width: 100%;
-    top: 10px;
+    top: -120px;
   }
 }
 
@@ -962,12 +963,12 @@ h2 {
 
 .main .service .service2 .box_4 p {
   margin: 0 55px 20px;
-  line-height: 30px;
+  line-height: 2;
 }
 
 @media (max-width: 991px) {
   .main .service .service2 .box_4 p {
-    line-height: 30px;
+    line-height: 2;
     margin: 10px 0 10px 15px;
     padding: 0 5px;
     width: 90%;
@@ -1583,7 +1584,7 @@ h2 {
 }
 
 .footer #footer-menu .menu-item-has-children {
-  margin-right: 20px;
+  margin-right: 50px;
 }
 
 /*-----モバイルフッター------------*/
@@ -1724,6 +1725,12 @@ p, table, blockquote, address, pre, iframe, form, figure, dl {
   line-height: 1.7;
 }
 
+@media (max-width: 991px) {
+  .main.common-lower p {
+    padding: 0 5px;
+  }
+}
+
 .wysiwyg-editor h1 {
   font-weight: bold;
   font-size: 32px;
@@ -1751,7 +1758,7 @@ p, table, blockquote, address, pre, iframe, form, figure, dl {
 .wysiwyg-editor h3 {
   font-size: 23px;
   font-weight: 600;
-  margin-bottom: 20px;
+  margin: 20px 0;
   padding: 0 0 10px 0;
   border-bottom: 2px solid #90CB83;
 }
@@ -1824,9 +1831,36 @@ p, table, blockquote, address, pre, iframe, form, figure, dl {
   text-align: center;
 }
 
+.main.single.common-lower .image {
+  margin: 0 auto;
+  max-width: 80%;
+  display: block;
+}
+
+.main.single.common-lower .single_cat {
+  margin: 0 auto;
+  width: 80%;
+}
+
+@media (max-width: 991px) {
+  .main.single.common-lower .single_cat {
+    width: 100%;
+  }
+}
+
 .smb-section-break-the-grid__figure>img {
   /*スノーモンキーの画像の調整*/
   height: auto;
+}
+
+@media (max-width: 991px) {
+  /*スノーモンキーのpaddingの調整*/
+  .wp-block-media-text .wp-block-media-text__content {
+    padding: 0;
+  }
+  .wp-block-columns.has-background {
+    padding: 10px;
+  }
 }
 
 /*-----アイキャッチの位置------*/
@@ -1865,6 +1899,7 @@ p, table, blockquote, address, pre, iframe, form, figure, dl {
 @media (max-width: 991px) {
   .breadcrumb {
     font-size: 12px;
+    margin-left: 20px;
   }
 }
 
@@ -2004,6 +2039,16 @@ p, table, blockquote, address, pre, iframe, form, figure, dl {
   margin-bottom: 30px;
 }
 
+.article-lists .box .detail p {
+  padding: 0 10px;
+}
+
+.wp-block-image img {
+  /*記事の画像サイズ調整*/
+  max-width: 100%;
+  height: auto;
+}
+
 /*--タイトルとカテゴリー横並び-*/
 
 .post-date {
@@ -2023,7 +2068,7 @@ p, table, blockquote, address, pre, iframe, form, figure, dl {
   text-align: center;
 }
 
-.return {
+.return_wrap .return {
   background-image: url(img/return.png);
   background-repeat: no-repeat;
   background-size: 14px;
@@ -2034,11 +2079,18 @@ p, table, blockquote, address, pre, iframe, form, figure, dl {
   margin-bottom: 30px;
 }
 
-.return a {
+@media (max-width: 991px) {
+  .main.single.common-lower .return_wrap .return {
+    padding: 0 20px;
+    background-position: left 6px;
+  }
+}
+
+.return_wrap .return a {
   transition: 1s;
 }
 
-.return a:hover {
+.return_wrap .return a:hover {
   color: #66a857;
 }
 
@@ -2327,6 +2379,10 @@ input.wpcf7-submit:hover {
   }
 }
 
+.contact_form .inquiry th, .contact_form .inquiry td {
+  border: none;
+}
+
 .contact_form .inquiry .txt_th {
   vertical-align: top;
 }
@@ -2360,6 +2416,7 @@ input.wpcf7-submit:hover {
 .privacy {
   text-align: center;
   margin: 0px auto 20px;
+  padding: 10px;
 }
 
 .privacy a {
@@ -2466,4 +2523,19 @@ input.wpcf7-submit:hover {
 
 .wp-block-table.company {
   padding: 0 15%;
+}
+
+@media(max-width:991px) {
+  .wp-block-table.company {
+    padding: 0;
+  }
+}
+
+@media(max-width:991px) {
+  .contact_form .wysiwyg-editor table th, .wysiwyg-editor table td {
+    padding: 20px 0;
+  }
+  .wysiwyg-editor table td {
+    padding-left: 20px;
+  }
 }
